vcpkg install fixed

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -63,7 +63,7 @@ jobs:
 
     - name: Install dependencies with vcpkg
       run: |
-        ./vcpkg/vcpkg install <your-library>
+        ./vcpkg/vcpkg install
       shell: bash
 
     - name: Configure CMake with vcpkg
