--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -48,8 +48,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install vcpkg
-      run: |
-        git clone https://github.com/microsoft/vcpkg.git
+      run: git clone https://github.com/microsoft/vcpkg.git
         cd vcpkg
         ./bootstrap-vcpkg.sh
       shell: bash
