Output Compiler Version

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -46,23 +46,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-
-    - name: Output Compiler Version
-      run: |
-        if [ "${{ matrix.os }}" == "ubuntu-latest" ]; then
-          echo "GCC Version:"
-          gcc --version
-          echo "G++ Version:"
-          g++ --version
-          echo "Clang Version:"
-          clang --version
-          echo "Clang++ Version:"
-          clang++ --version
-        elif [ "${{ matrix.os }}" == "windows-latest" ]; then
-          echo "MSVC Version:"
-          cl
-        fi
-
     - name: Install vcpkg
       run: |
         git clone https://github.com/microsoft/vcpkg.git
@@ -83,8 +66,7 @@ jobs:
       shell: bash
 
     - name: Configure CMake with vcpkg
-      run: |
-        cd ${{ github.workspace }}
+      run:
         cmake -B ${{ steps.strings.outputs.build-output-dir }}
         -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
